--- a/public/kategori/kategori-barang.html
+++ b/public/kategori/kategori-barang.html
@@ -406,9 +406,9 @@
     <!-- CONTENT -->
     <section class="satuan-barang -ml-[70px] lg:-ml-9 xl:-ml-5 sm:-ml-2 md:-ml-3">
       <div class="title">
-        <h1 class="font-semibold ml-[15px]">kategori barang</h1>
+        <h1 class="font-semibold ml-[15px] md:ml-[60px] lg:ml-[15px]">kategori barang</h1>
       </div>
-      <div class="cards grid sm:grid-cols-2 sm:gap-x-10 sm:mx-100 sm:ml-1 sm:mx-5 sm:p-3 md:grid-cols-2 md:ml-5 md:mr-5 lg:grid-cols-3 lg:ml-60 xl:grid-cols-4 xl:ml-60 gap-x-7">
+      <div class="cards grid sm:grid-cols-2 sm:gap-x-10 sm:mx-100 sm:ml-1 sm:mx-5 sm:p-3 md:grid-cols-2 md:ml-5 md:mr-5 lg:grid-cols-3 lg:ml-60 xl:grid-cols-4 xl:ml-60 gap-x-7 -mt-[40px] sm:-mt-[15px]">
         <div class="card sm:w-[305px] md:w-[350px] lg:w-[16rem] xl:w-[16rem] bg-biru">
           <div class="content flex-col -mt-[14px] -ml-[25px]">
             <img src="../../img/icons/cpu.png" alt="" class="w-[85px] -mt-[10px] -ml-[50px]">
@@ -484,5 +484,6 @@
     <!-- END CONTENT -->
 
 <script src="../../dist/kategoriJS/kategoriBarang.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
