--- a/public/peminjaman/form-peminjaman.html
+++ b/public/peminjaman/form-peminjaman.html
@@ -269,7 +269,7 @@
 <body class="h-screen mx-auto antialiased flex justify-between bg-purple-100 font-inter" onload="onload()">
   
     <!-- NAV -->
-    <div class="navbar fixed flex p-5 bg-gradient-to-r from-ungu1 to-ungu2 w-100% mr-0 z-10">
+    <div class="navbar fixed flex justify-between p-5 bg-gradient-to-r from-ungu1 to-ungu2 w-100% mr-0 z-10">
       <div class="text-left font-bold items-center ">
         <a href="">
           <h3 class="text-white ml-14 lg:ml-4 text-lg block">InVentory</h3>
@@ -277,7 +277,7 @@
         <div>
         </div>
       </div>
-      <div class="profile ml-[260px] sm:ml-[350px] float-right lg:ml-[760px] xl:ml-[1080px] md:ml-[475px]">
+      <div class="profile">
         <a href="profile.html" class="flex"><h3 class="text-white font-semibold pr-3 pt-1">NoFace21</h3> 
         <img src="../../img/noface.jpg" alt="profile" class="w-7 h-7 rounded-full border"></a>
       </div>
@@ -286,7 +286,7 @@
               <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
             </svg>
           <input type="text" name="text" placeholder="Search" class="sm-input placeholder-white text-white items-center bg-opacity-25 max-w-md w-80 lg:w-[1000px] bg-slate-100 rounded-md px-10 h-10 text-xs font-semibold focus:border-ungu1 focus:outline-none " required>
-          </div>
+      </div>
     </div>
 
     <!-- HAMBURGER -->
