--- a/public/dashboard/dash.html
+++ b/public/dashboard/dash.html
@@ -247,6 +247,16 @@
           margin-left: -1.5rem;
         }
       }
+
+      @media screen and (max-width: 438px){
+        .profile {
+          margin-left: 16%;
+        }
+        .container{
+          margin-left: 0;
+        }
+      }
+
       @media screen and (max-width: 403px){
         .profile {
           margin-left: 16%;
@@ -255,9 +265,14 @@
           margin-left: 0;
         }
       }
+
       @media screen and (max-width: 375px){
         #content > .thumb{
           overflow: hidden;
+        }
+        #tanggal {
+          width: 60%;
+          padding-left: -10%;
         }
       }
       /* end of responsive */
