--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -533,17 +533,7 @@
     <!-- end of pop up box -->
     
 <script src="../../dist/profileJS/profile.js"></script>
-<script>
-  // Hamburger
-const hamburger = document.querySelector('#hamburger');
-const navMenu = document.querySelector('#nav-menu');
-const navInput = document.querySelector('.nav-input');
-
-hamburger.addEventListener('click', function(){
-    hamburger.classList.toggle('hamburger-active');
-    navMenu.classList.toggle('hidden');
-});
-</script>
+<script src="../../src/script.js"></script>
 
 </body>
 </html>
