--- a/public/dashboard/ubahSupplier.html
+++ b/public/dashboard/ubahSupplier.html
@@ -452,7 +452,7 @@
                     
                 </form>
 
-                <hr class="-ml-[31px] sm:-ml-[132px] md:-ml-[4px] lg:-ml-[4px] h-0.5 w-[416px] sm:w-[617px] md:w-[745px] lg:w-[1000px] xl:w-[1102px] mt-[30px] md:mt-[40px] bg-slate-400">
+                <!-- <hr class="-ml-[31px] sm:-ml-[132px] md:-ml-[4px] lg:-ml-[4px] h-0.5 w-[416px] sm:w-[617px] md:w-[745px] lg:w-[1000px] xl:w-[1102px] mt-[30px] md:mt-[40px] bg-slate-400"> -->
 
                 <div class="btn flex sm:-ml-[50px] md:ml-[175px] xl:ml-[360px] mt-[15px] sm:mt-[30px] md:mt-[35px] xl:mt-[45px]">
                     <button type="submit" class="rounded-lg px-12 py-2 font-semibold bg-white hover:bg-opacity-80 text-slate-400 transition duration-300 border border-slate-400 hover:bg-ungu1 hover:text-white">Batal</button>
