update responsive tuluykeun sok

--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -75,6 +75,26 @@
       /* end of animate style */
 
       /* Responsive */
+      @media screen and (min-width: 1481px){
+        div.profile {
+          margin-left: 82%;
+        }
+        div.profile2 {
+          margin-left: 43%;
+        }
+        div.kotak1 {
+          width: 85%;
+        }
+        div.kotak2 {
+          width: 85%;
+        }
+        div.line {
+          width: 106.7%;
+        }
+        div.data {
+          margin-left: 69%;
+        }
+      }
       @media screen and (max-width: 1480px){
         div.profile {
           margin-left: 82%;
@@ -95,8 +115,7 @@
           margin-left: 69%;
         }
       }
-
-      @media screen and (max-width: 1320px){
+      @media screen and (max-width: 1325px){
         div.profile {
           margin-left: 82%;
         }
@@ -104,10 +123,10 @@
           margin-left: 43%;
         }
         div.kotak1 {
-          width: 85%;
+          width: 81.4%;
         }
         div.kotak2 {
-          width: 85%;
+          width: 81.4%;
         }
         div.line {
           width: 106.7%;
@@ -126,10 +145,10 @@
           margin-top: 20px;
         }
         div.kotak1 {
-          width: 74%;
+          width: 90%;
         }
         div.kotak2 {
-          width: 74%;
+          width: 90%;
         }
         div.line {
           width: 108.7%;
@@ -141,7 +160,30 @@
           margin-left: 60%;
         }
       }
-
+      @media screen and (max-width: 1173px){
+        div.kotak1 {
+          width: 85%;
+        }
+        div.kotak2 {
+          width: 85%;
+        }
+      }
+      @media screen and (max-width: 1120px){
+        div.kotak1 {
+          width: 80%;
+        }
+        div.kotak2 {
+          width: 80%;
+        }
+      }
+      @media screen and (max-width: 1065px){
+        div.kotak1 {
+          width: 75%;
+        }
+        div.kotak2 {
+          width: 75%;
+        }
+      }
       @media screen and (max-width: 1023px){
         div.profile {
           margin-left: 65%;
@@ -151,10 +193,12 @@
           margin-top: 50px;
         }
         div.kotak1 {
-          width: 96%;
+          width: 100%;
+          margin-left: 15%;
         }
         div.kotak2 {
-          width: 96%;
+          width: 100%;
+          margin-left: 15%;
         }
         div.line {
           width: 109.5%;
@@ -166,8 +210,31 @@
           margin-left: 1%;
         }
       }
-
-      @media screen and (max-width: 767px){
+      @media screen and (max-width: 910px){
+        div.kotak1 {
+          margin-left: 10%;
+        }
+        div.kotak2 {
+          margin-left: 10%;
+        }
+      }
+      @media screen and (max-width: 860px){
+        div.kotak1 {
+          margin-left: 5%;
+        }
+        div.kotak2 {
+          margin-left: 5%;
+        }
+      }
+      @media screen and (max-width: 821px){
+        div.kotak1 {
+          margin-left: 3%;
+        }
+        div.kotak2 {
+          margin-left: 3%;
+        }
+      }
+      @media screen and (max-width: 805px){
         div.profile {
           margin-left: 38%;
         }
