--- a/public/satuan/ubah-satuan.html
+++ b/public/satuan/ubah-satuan.html
@@ -439,7 +439,7 @@
 <div class="h-[700px]" id="content">
     <div class="mt-[90px] ml-[13px] sm:ml-0 md:ml-0 lg:ml-[230px] xl:ml-[5px]">
         <h1 class="xl:-mt-[5px] ml-[5px] sm:ml-[10px] md:ml-[15px] absolute text-ungu1 text-[25px] lg:ml-[25px] xl:ml-[220px]">Ubah Satuan</h1>
-        <div class="kotak1 bg1 absolute bg-pp -ml-[3px] sm:ml-[11px] md:ml-[12px] xl:ml-[220px] w-[415px] sm:w-[616px] md:w-[742px] xl:w-[1100px] h-[290px] sm:h-[315px] md:h-[380px] xl:h-[380px] bg-white p-8 m-96 mt-[120px] xl:mt-[120px] rounded-lg shadow-2xl mb-5">
+        <div class="kotak1 bg1 absolute bg-pp -ml-[3px] sm:ml-[11px] md:ml-[12px] xl:ml-[220px] w-[415px] sm:w-[616px] md:w-[742px] xl:w-[1100px] h-[255px] sm:h-[305px] md:h-[340px] xl:h-[340px] bg-white p-8 m-96 mt-[120px] xl:mt-[120px] rounded-lg shadow-2xl mb-5">
             
         </div>
         <div class="kotak2 absolute bg-pp -ml-[3px] sm:ml-[11px] md:ml-[12px] xl:ml-[220px] w-[415px] sm:w-[615px] md:w-[742px] xl:w-[1100px] h-[50px] md:h-[90px] sm:h-[50px] bg-gradient-to-t from-ungu1 to-ungu2 p-8 m-96 mt-[60px] sm:mt-[60px] xl:mt-[50px] rounded-b-none rounded-lg">
@@ -468,7 +468,7 @@
                   </div>
               </form>
 
-              <hr class="-ml-[31px] sm:-ml-[132px] md:-ml-[4px] lg:-ml-[4px] h-0.5 w-[416px] sm:w-[617px] md:w-[745px] lg:w-[1000px] xl:w-[1102px] mt-[30px] md:mt-[40px] bg-slate-400">
+              <!-- <hr class="-ml-[31px] sm:-ml-[132px] md:-ml-[4px] lg:-ml-[4px] h-0.5 w-[416px] sm:w-[617px] md:w-[745px] lg:w-[1000px] xl:w-[1102px] mt-[30px] md:mt-[40px] bg-slate-400"> -->
 
               <div class="btn flex sm:-ml-[50px] md:ml-[175px] xl:ml-[360px] mt-[15px] sm:mt-[30px] md:mt-[35px] xl:mt-[45px]">
                   <button type="submit" class="rounded-lg px-12 py-2 font-semibold bg-white hover:bg-opacity-80 text-slate-400 transition duration-300 border border-slate-400 hover:bg-ungu1 hover:text-white">Batal</button>
