add REST-API untuk halaman gudang

--- a/public/gudang/gudang.html
+++ b/public/gudang/gudang.html
@@ -573,69 +573,17 @@ body{
             <thead>
               <tr class="font-semibold">
                 <th>no</th>
-                <th>id</th>
-                <th>nama</th>
-                <th>typeMerk</th>
+                <th>nama barang</th>
+                <th>spesifikasi</th>
+                <th>kategori</th>
                 <th>satuan</th>
-                <th>harga Satuan</th>
-                <th>stok-Awal</th>
-                <th>stok-Akhir</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>BRG-001</td>
-                <td>keybord</td>
-                <td>logitech</td>
-                <td>dus</td>
-                <td>rp. 100.000,00</td>
-                <td>10</td>
-                <td>6</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>BRG-001</td>
-                <td>keybord</td>
-                <td>logitech</td>
-                <td>dus</td>
-                <td>rp. 100.000,00</td>
-                <td>10</td>
-                <td>6</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>BRG-001</td>
-                <td>keybord</td>
-                <td>logitech</td>
-                <td>dus</td>
-                <td>rp. 100.000,00</td>
-                <td>10</td>
-                <td>6</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>BRG-001</td>
-                <td>keybord</td>
-                <td>logitech</td>
-                <td>dus</td>
-                <td>rp. 100.000,00</td>
-                <td>10</td>
-                <td>6</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>BRG-001</td>
-                <td>keybord</td>
-                <td>logitech</td>
-                <td>dus</td>
-                <td>rp. 100.000,00</td>
-                <td>10</td>
-                <td>6</td>
-              </tr>
+            <tbody id="tbody">
+             
             </tbody>
           </table>
-
+          
           <div class="table-footer">
             <button type="button" name="button" class="prev"><img src="../../img/icons/back.png" alt=""><span>Previous</span></button>
             <input type="text" name="" class="field" value="1" disabled>
