modify field table halaman peminjaman-hari-ini

--- a/public/peminjaman/peminjaman-hari-ini.html
+++ b/public/peminjaman/peminjaman-hari-ini.html
@@ -776,8 +776,8 @@ body{
                 <th>no</th>
                 <th>nama barang</th>
                 <th>jumlah</th>
-                <th>satuan</th>
                 <th>tanggal pinjam</th>
+                <th>status peminjaman</th>
                 <th>aksi</th>
               </tr>
             </thead>
@@ -786,8 +786,8 @@ body{
                 <td>1</td>
                 <td>keybord logitech</td>
                 <td>4</td>
-                <td>dus</td>
-                <td>03/03/2023</td>
+                <td>10/05/2022</td>
+                <td>belum dikembalikan</td>
                 <td class="table-btn">
                   <a href="#" class="sm:mr-[60px] md:mr-0 p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #00C2FF;">ubah</a>
                   <a href="#" class="p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #FF5050;">hapus</a>
@@ -797,11 +797,11 @@ body{
               <tr>
                 <td>2</td>
                 <td>mouse logitech</td>
-                <td>2</td>
-                <td>pcs</td>
-                <td>03/03/2023</td>
+                <td>100</td>
+                <td>10/05/2022</td>
+                <td>dikembalikan</td>
                 <td class="table-btn">
-                  <a href="#" class="p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #00C2FF;">ubah</a>
+                  <a href="#" class="sm:mr-[60px] md:mr-0 p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #00C2FF;">ubah</a>
                   <a href="#" class="p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #FF5050;">hapus</a>
                 </td>
               </tr>
