add request api halaman peminjaman hari ini

--- a/public/peminjaman/peminjaman-hari-ini.html
+++ b/public/peminjaman/peminjaman-hari-ini.html
@@ -754,7 +754,7 @@ body{
             <p class="font-semibold capitalize">peminjaman barang</p>
           </div>
           <div class="input-field">
-            <a href="#" class="capitalize font-semibold">tambah peminjaman</a>
+            <a href="form-peminjaman.html" class="capitalize font-semibold">tambah peminjaman</a>
           </div>
         </div>
         <!-- end of navbar table -->
@@ -762,7 +762,7 @@ body{
         <!-- title table -->
         <div class="title-table W-[500px] p-96">
           <div class="title input-field w-[100%]">
-            <p class="font-semibold capitalize text-[1.7em] text-center">data peminjaman hari ini</p>
+            <p class="font-semibold capitalize text-[1.7em] text-center">data peminjaman barang</p>
           </div>
         </div>
         <!-- end of title table -->
@@ -781,30 +781,7 @@ body{
                 <th>aksi</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>keybord logitech</td>
-                <td>4</td>
-                <td>10/05/2022</td>
-                <td>belum dikembalikan</td>
-                <td class="table-btn">
-                  <a href="#" class="sm:mr-[60px] md:mr-0 p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #00C2FF;">ubah</a>
-                  <a href="#" class="p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #FF5050;">hapus</a>
-                </td>
-              </tr>
-              
-              <tr>
-                <td>2</td>
-                <td>mouse logitech</td>
-                <td>100</td>
-                <td>10/05/2022</td>
-                <td>dikembalikan</td>
-                <td class="table-btn">
-                  <a href="#" class="sm:mr-[60px] md:mr-0 p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #00C2FF;">ubah</a>
-                  <a href="#" class="p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #FF5050;">hapus</a>
-                </td>
-              </tr>
+            <tbody id="table-body">
             </tbody>
           </table>
 
@@ -836,7 +813,7 @@ body{
       <!-- title table -->
         <div class="title-table W-[500px] p-96">
           <div class="title input-field">
-            <p class="font-semibold capitalize sm:text-[1.6em] text-center">data peminjaman hari ini</p>
+            <p class="font-semibold capitalize sm:text-[1.6em] text-center">data peminjaman barang</p>
           </div>
         </div>
       <!-- end of title table -->
@@ -844,8 +821,8 @@ body{
         <!-- tables -->
         <div class="container-table" id="content">
           <table class="table" cellspacing="0" cellpadding="0">
-            <thead>
-              <tr class="font-semibold">
+            <thead id="table-hidden">
+              <!-- <tr>
                 <th>No</th>
                 <td>1</td>
               </tr>
@@ -858,11 +835,11 @@ body{
                 <td>4</td>
               </tr>
               <tr>
-                <th>satuan</th>
-                <td>dus</td>
+                <th>tanggal pinjam</th>
+                <td>rp. 03/03/2023</td>
               </tr>
               <tr>
-                <th>tanggal pinjam</th>
+                <th>status peminjaman</th>
                 <td>rp. 03/03/2023</td>
               </tr>
               <tr>
@@ -871,10 +848,10 @@ body{
                   <a href="#" class="sm:mr-[60px] md:mr-0 p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #00C2FF;">ubah</a>
                   <a href="#" class="p-2 px-5 mx-1 rounded-lg text-white text-sm md:text-xs" style="background-color: #FF5050;">hapus</a>
                 </td>
-              </tr>
+              </tr> -->
             </thead>
           </table>
-          <div class="table-footer">
+          <div class="table-footer" id="table-footer">
               <button type="button" name="button" class="prev"><img src="../../img/icons/back.png" alt=""><span>Previous</span></button>
               <input type="text" name="" class="field" value="1" disabled>
               <button type="button" name="button" class="next"><span>Next</span><img src="../../img/icons/next.png" alt="Next"></button>
