add REQUEST API

--- a/public/gudang/gudang.html
+++ b/public/gudang/gudang.html
@@ -643,6 +643,7 @@ body{
               </tr>
             </thead>
           </table>
+          <?= $pager->links() ?>
 
           <div class="table-footer">
             <button type="button" name="button" class="prev"><img src="../../img/icons/back.png" alt=""><span>Previous</span></button>
