add javascript halaman gudang dan peminjaman

--- a/public/gudang/gudang.html
+++ b/public/gudang/gudang.html
@@ -608,42 +608,9 @@ body{
         <!-- tables -->
         <div class="container-table" id="container">
           <table class="table" cellspacing="0" cellpadding="0">
-            <thead>
-              <tr>
-                <th class="font-semibold">no</th>
-                <td>1</td>
-              </tr>
-              <tr>
-                <th class="font-semibold">id</th>
-                <td>BRG-001</td>
-              </tr>
-              <tr>
-                <th class="font-semibold">nama</th>
-                <td>keybord</td>
-              </tr>
-              <tr>
-                <th class="font-semibold">typeMerk</th>
-                <td>logitech</td>
-              </tr>
-              <tr>
-                <th class="font-semibold">satuan</th>
-                <td>dus</td>
-              </tr>
-              <tr>
-                <th class="font-semibold">harga Satuan</th>
-                <td>rp. 50.000,00</td>
-              </tr>
-              <tr>
-                <th class="font-semibold">stok-Awal</th>
-                <td>10</td>
-              </tr>
-              <tr>
-                <th class="font-semibold">stok-Akhir</th>
-                <td>6</td>
-              </tr>
+            <thead id="table-hidden">
             </thead>
           </table>
-          <?= $pager->links() ?>
 
           <div class="table-footer">
             <button type="button" name="button" class="prev"><img src="../../img/icons/back.png" alt=""><span>Previous</span></button>
